# cookienumberprinter

./: CMakeLists.txt  README.md  cookieNumber.h  main.cpp  sonar-project.properties
.github/workflows/: codeql-analysis.yml
